// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card/> matches snapshot 1`] = `
<div>
  <article
    class="main-card css-dbz0dc-cardContainer-cardContainer"
    data-testid="card"
    id="my-card"
  >
    <div
      class="css-2whgcf-aspectRatioContainer-aspectRatioContainer"
    >
      <div
        class="aspect-ratio-wrapper"
      >
        <section
          class="css-1og46qe-courseHeaderContainer"
        >
          <img
            alt="An image"
            class="css-1yhpqgg-thumbnailContainer"
            src="https://talentlms-prod-frontend-static.s3.us-east-1.amazonaws.com/images/default-course.png"
          />
        </section>
      </div>
    </div>
    <section
      class="card-body-container css-1m2q5o0-cardBody"
    >
      <a>
        Something
      </a>
      <span>
        Details
      </span>
    </section>
  </article>
</div>
`;

exports[`<Card/> matches snapshot with drawer 1`] = `
<div>
  <article
    class="css-dbz0dc-cardContainer-cardContainer"
    data-testid="card"
  >
    <section
      class="css-1g8lc2l-drawerContainer-drawerContainer"
      style="overflow-y: hidden; width: 0%;"
    >
      <div
        class="content-wrapper"
        style="opacity: 0;"
      >
        <div>
          <header>
            <div>
              Drawer title
            </div>
            <button>
              <svg-file-stub
                height="16"
              />
            </button>
          </header>
          <p>
            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam labore ratione error adipisci dolorem corporis voluptatibus quia nihil quaerat ipsa tempora, in neque facere doloremque aut tempore ullam molestias necessitatibus!
          </p>
        </div>
        <footer>
          Drawer footer
        </footer>
      </div>
    </section>
  </article>
</div>
`;

exports[`<Card/> matches snapshot with hover 1`] = `
<div>
  <article
    class="css-dbz0dc-cardContainer-cardContainer"
    data-testid="card"
  >
    <div
      class="css-2whgcf-aspectRatioContainer-aspectRatioContainer"
    >
      <div
        class="aspect-ratio-wrapper"
      >
        <section
          class="css-1og46qe-courseHeaderContainer"
        >
          <img
            alt="An image"
            class="css-1yhpqgg-thumbnailContainer"
            src="https://talentlms-prod-frontend-static.s3.us-east-1.amazonaws.com/images/default-course.png"
          />
          <div
            class="css-1cqndrb-hoverContainer-hoverContainer"
            data-testid="card-hover"
            style="opacity: 0;"
          >
            <div
              class="hover-wrapper"
              style="display: none;"
            >
              Hover text
            </div>
          </div>
        </section>
      </div>
    </div>
  </article>
</div>
`;

exports[`<Card/> matches snapshot with overlay 1`] = `
<div>
  <article
    class="css-dbz0dc-cardContainer-cardContainer"
    data-testid="card"
  >
    <div
      class="css-t9mg5a-overlayContainer-overlayContainer"
    >
      Hello Overlay
    </div>
    <div
      class="css-2whgcf-aspectRatioContainer-aspectRatioContainer"
    >
      <div
        class="aspect-ratio-wrapper"
      >
        <section
          class="css-1og46qe-courseHeaderContainer"
        >
          <img
            alt="An image"
            class="css-1yhpqgg-thumbnailContainer"
            src="https://talentlms-prod-frontend-static.s3.us-east-1.amazonaws.com/images/default-course.png"
          />
        </section>
      </div>
    </div>
  </article>
</div>
`;

exports[`<Card/> matches snapshot with transparent hover 1`] = `
<div>
  <article
    class="css-dbz0dc-cardContainer-cardContainer"
    data-testid="card"
  >
    <div
      class="css-2whgcf-aspectRatioContainer-aspectRatioContainer"
    >
      <div
        class="aspect-ratio-wrapper"
      >
        <section
          class="css-1og46qe-courseHeaderContainer"
        >
          <img
            alt="An image"
            class="css-1yhpqgg-thumbnailContainer"
            src="https://talentlms-prod-frontend-static.s3.us-east-1.amazonaws.com/images/default-course.png"
          />
          <div
            class="css-6qoyd1-hoverContainer-hoverContainer"
            data-testid="card-hover"
            style="opacity: 0;"
          >
            <div
              class="hover-wrapper"
              style="display: none;"
            >
              Hover text
            </div>
          </div>
        </section>
      </div>
    </div>
  </article>
</div>
`;
